image fix
fix on css social media icons distorted on phone

--- a/blogpage.css
+++ b/blogpage.css
@@ -177,7 +177,8 @@ body .dark-panel2{
 
 /* icons in footer */
 body .dark-panel2 img{
-width: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 
