--- a/homeStyle.css
+++ b/homeStyle.css
@@ -159,6 +159,7 @@ justify-content: center;
 }
 body .dark-panel2 img{
 width: 50px;
+height: 50px;
 
 }
 
