--- a/musicpage.css
+++ b/musicpage.css
@@ -186,7 +186,8 @@ justify-content: center;
 
 /* icons in footer */
 body .dark-panel2 img{
-width: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 /* style for left panel*/
