--- a/newspage.css
+++ b/newspage.css
@@ -188,7 +188,8 @@ justify-content: center;
 
 /* icons in footer */
 body .dark-panel2 img{
-width: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 
